# Data-Science

./: .gitignore  README.md  pyproject.toml  requirements.txt
1_Python_Basics/: 1_python.ipynb  2_numpy.ipynb  3_pandas.ipynb  4_Matplotlib_seaborn.ipynb  6_Plotly.ipynb  example.txt
2_Maths/: 1_linear_algebra.ipynb  4_statistics.ipynb
3_EDA/: 1_EDA.ipynb  2_EDA_Titanic.ipynb  3_EDA_olympics.ipynb
4_Frontend/1_Streamlit/: 10_different_plots_with_sidebar.py  12_caching_data.py  (+17 more)
5_Backend (FastAPI)/: 10_extra_models.py  11_backgroundTask.py  12_Using_ML_model_in_FastAPI.py  13_FastAPI_with_Streamlit.py  14_User_management.py  1_CRUD.py  2_Body_Parameters.py  3_Body_Field.py  4_Body_Field_Validation.py  5_Nested_models.py  6_Declaring_Request.py  7_extra_data_types.py  8_cookie_and_header_params.py  9_response_model.py
7_Deep_Learning/: 10_Pretrained_models.ipynb  11_RNN.ipynb  12_GRU.ipynb  13_LSTM.ipynb  14_Generative_Modeling.ipynb  15_Named_Entity_Recognition.ipynb  16_Techniques_for_saving_tf_models.ipynb  1_EWMA.ipynb  2_keras_tuner.ipynb  3_Overfitting_Handling.ipynb  4_Weights_initialization.ipynb  5_speed_model_training.ipynb  6_Ann.ipynb  7_Ann_on_image_data.ipynb  8_CNN.ipynb  9_Tensorflow_data_loading.ipynb
9_NLP/: 10_Text_Summarization.ipynb  11_QA.ipynb  1_Basics_tokenization_Stemming_Lemmatization_stopwords.ipynb  2_Text_Representation_Advanced.ipynb  2_Text_Representations_Traditional.ipynb  3_Sentense_Embedding.ipynb  4_BERT.ipynb  5_Sentiment_Analysis.ipynb  6_POS_tagging.ipynb  7_NER.ipynb  8_Machine_Translation.ipynb  9_Next_Word_Prediction.ipynb
(+50 files in other folders)
