[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.119.1",
    "gensim>=4.4.0",
    "gradio>=5.49.1",
    "keras>=3.11.3",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
]
